@@ -1,7 +1,7 @@
 INCLUDES = -I$(top_srcdir)
 
-bin_PROGRAMS = trietool
+bin_PROGRAMS = trietool-0.2
 
-trietool_SOURCES = trietool.c
-trietool_LDADD = $(top_builddir)/datrie/libdatrie.la
+trietool_0_2_SOURCES = trietool.c
+trietool_0_2_LDADD = $(top_builddir)/datrie/libdatrie.la
 
